--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Decodes data from RAW camera files.",
   "main": "./lib/decoder.js",
   "scripts": {
-    "test": "npm run test:lint && npm run test:unit",
+    "build": "tsc",
+    "test": "npm run build && npm run test:lint && npm run test:unit",
     "test:unit": "mocha --reporter spec 'test/**/*.test.js'",
-    "test:lint": "lint",
+    "test:lint": "tslint --type-check --project tsconfig.json 'lib/**/*.ts'",
     "test:update-expectations": "UPDATE_EXPECTATIONS=true npm run test:unit",
     "test:upload": "bash test/fixtures/upload.sh",
     "test:update-all": "npm run test:update-expectations && npm run test:upload",
     "test:download": "bash test/fixtures/download.sh",
-    "test:coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- 'test/**/*.test.js'",
+    "test:coverage": "nyc npm run test:unit",
     "test:watch": "mocha --watch --reporter dot 'test/**/*.test.js'",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -32,13 +33,18 @@
   },
   "devDependencies": {
     "@patrickhulce/lint": "^1.0.0",
+    "@types/lodash": "^4.14.63",
+    "@types/node": "^7.0.16",
     "chai": "^3.5.0",
     "cz-conventional-changelog": "^2.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.3.0",
+    "nyc": "^10.3.0",
     "semantic-release": "^6.3.2",
     "sinon": "^2.1.0",
-    "sinon-chai": "^2.10.0"
+    "sinon-chai": "^2.10.0",
+    "tslint": "^5.2.0",
+    "typescript": "^2.3.2"
   },
   "dependencies": {
     "debug": "^2.6.6",
