--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - npm run test:coverage
 after_success:
   - nyc report --reporter=text-lcov | coveralls || echo 'Failed to upload to coveralls...'
-  # - npm run semantic-release
+  - npm run semantic-release
